--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,25 @@
-<hello name="{{ name }}"></hello>
-<p>
-  Start editing to see some magic happen :)
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-sm-10 col-md-8">
+      <form [formGroup]="projectForm" (ngSubmit)="onProjectSave()">
+        <div class="form-group">
+          <label for="name">Project Name</label>
+          <input type="text" id="name" class="form-control" formControlName="projectName" >
+        </div>
+        <div class="form-group">
+          <label for="email">Mail</label>
+          <input type="email" id="email" class="form-control" formControlName="email">
+        </div>
+        <div class="form-group">
+          <label for="status">Project Status</label>
+          <select id="status" class="form-control" formControlName="projectStatus">
+            <option value="stable">Stable</option>
+            <option value="critical">Critical</option>
+            <option value="finished">Finished</option>
+          </select>
+        </div>
+        <button class="btn btn-primary" type="submit">Create Project</button>
+      </form>
+    </div>
+  </div>
+</div>
